--- a/src/app/components/language-selector/language-selector.component.html
+++ b/src/app/components/language-selector/language-selector.component.html
@@ -1,26 +1,16 @@
-<div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-    <input type="radio" class="btn-check" name="btnradio" id="btnradioRo" autocomplete="off" checked
-        (click)="changeLanguage('ro')">
-    <label class="btn btn-outline-primary" for="btnradioRo">
-        <span class="fi fi-ro"></span>
-        Română
-    </label>
-
-    <input type="radio" class="btn-check" name="btnradio" id="btnradioEn" autocomplete="off"
-        (click)="changeLanguage('en')">
-    <label class="btn btn-outline-primary" for="btnradioEn">
-        <span class="fi fi-gb"></span>
-        English
-    </label>
-</div>
-
-<!-- <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-    <span *ngFor="let language of languagesList; index as i"
-    (click)="changeLanguage(language.code)">
-        <input type="radio" class="btn-check" name="btnradio" id="btnradio-{{language.code}}" autocomplete="off" checked>
-        <label class="btn btn-outline-success" for="btnradio-{{language.code}}">
+<div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"
+    (click)="changeLanguage(selectedLanguage.code)">
+        <span class="fi fi-{{selectedLanguage.countryCode}}"></span>
+        {{selectedLanguage.name}}
+    </button>
+    <ul class="dropdown-menu">
+      <li *ngFor="let language of languagesList; index as i"
+      (click)="changeLanguage(language.code)">
+        <button class="dropdown-item" type="button" active>
             <span class="fi fi-{{language.countryCode}}"></span>
             {{language.name}}
-        </label>
-    </span>
-</div> -->
+        </button>
+      </li>
+    </ul>
+  </div>
