--- a/src/app/components/glossasry/glossasry.component.html
+++ b/src/app/components/glossasry/glossasry.component.html
@@ -1,7 +1,8 @@
 <div class="page-title">
     <h1>{{ 'menu.glossary' | transloco }}</h1>
 </div>
-<div class="list-group">
+<app-url-navigation [contentFileName]="contentFileName"></app-url-navigation>
+<!-- <div class="list-group">
     <a href="#" class="list-group-item list-group-item-action">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
             class="bi bi-file-earmark-code-fill" viewBox="0 0 16 16">
@@ -44,4 +45,4 @@
         </svg>
         CARIFFY - informatii vehicule
     </a>
-</div>
+</div> -->
